# setup-servers

./: .gitignore  pyproject.toml
src/: run_both.py  run_help.py
src/example/: file_locking.py
src/setupserver/: cli.py
src/setupserver/helpers/: setup-server.py
src/setupservers/: __init__.py  api.py  commands.py  setup_server.py  setup_servers.py  states.py  util.py
src/setupservers/command/: hapi_jpa_starter.py  postgres_docker.py
src/template/setup-db/001----postgres-v1/: setup_db.py
src/template/setup-db/setup-db/: setup-db.py  setup_db.py
src/template/setup-fhir-server/setup-fhir-server/: setup_fhir_server.py
tmp/: run_both.py  setup-server-install.py  setup-server.py
tmp/setup-db/setup-db/: setup-db.py
